@@ -1,0 +1,4 @@
+# NHC Test Configuration File
+#
+# $Id$
+#
